erDiagram
    CATEGORIES {
        bigint id PK
        string code UK
        string name
        string description
        boolean is_active
    }

    PRODUCTS {
        bigint id PK
        bigint category_id FK
        string name
        string brand
        text description
        decimal sale_price
        decimal rent_price_per_day
        int quantity
        int rental_quantity
        boolean is_for_sale
        boolean is_for_rent
        boolean is_active
        string main_image_url
    }

    PRODUCT_IMAGES {
        bigint id PK
        bigint product_id FK
        string image_url
    }

    PRODUCT_SPECIFICATIONS {
        bigint id PK
        bigint product_id FK
        string spec_key
        text spec_value
    }

    PRODUCT_PRICE_HISTORIES {
        bigint id PK
        bigint product_id FK
        bigint changed_by FK
        string price_type
        decimal old_price
        decimal new_price
    }

    DEVICES {
        bigint id PK
        bigint product_id FK
        string serial_number UK
        string status
        text condition_details
    }

    INVENTORY_AUDIT_LOGS {
        bigint id PK
        bigint product_id FK
        bigint changed_by FK
        int old_stock
        int new_stock
        string stock_type
        text reason
    }

    USERS {
        bigint id PK
        string email
    }

    CATEGORIES ||--o{ PRODUCTS : "contains"
    PRODUCTS ||--o{ PRODUCT_IMAGES : "has"
    PRODUCTS ||--o{ PRODUCT_SPECIFICATIONS : "has"
    PRODUCTS ||--o{ PRODUCT_PRICE_HISTORIES : "price history"
    PRODUCTS ||--o{ DEVICES : "physical devices"
    PRODUCTS ||--o{ INVENTORY_AUDIT_LOGS : "stock logs"

    USERS ||--o{ PRODUCT_PRICE_HISTORIES : "changes"
    USERS ||--o{ INVENTORY_AUDIT_LOGS : "updates"